backups/ssh-tunnel.vlabs.ac.in/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Wed Apr 29 10:37:27 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [321:67251]
:fail2ban-SSH - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j fail2ban-SSH 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5666 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8634 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -j REJECT --reject-with icmp-port-unreachable 
-A fail2ban-SSH -s 58.218.204.239/32 -j REJECT --reject-with icmp-port-unreachable 
-A fail2ban-SSH -j RETURN 
COMMIT
# Completed on Wed Apr 29 10:37:27 2015
